[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-aedt-toolkits-template"
dynamic = ["version"]
description = "Template repository to create your own toolkit using PyAEDT."
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "build==1.0.3",
    "twine==4.0.2",
    "pyaedt",
    "importlib-metadata >=4.0",
    "PySide6-Essentials==6.5.2",
    "pyqtgraph",
    "qdarkstyle",
    "flask",
]

[project.optional-dependencies]
tests = [
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
]
doc = [
    "ansys-sphinx-theme==0.12.0",
    "numpydoc==1.6.0",
    "recommonmark==0.7.1",
    "sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "enum-tools[sphinx]==0.11.0",
    "sphinx-autoapi==3.0.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.24.0",
    "sphinx-gallery==0.14.0",
    "sphinx-notfound-page==1.0.0",
    "nbsphinx==0.9.2",
]

[tool.flit.module]
name = "ansys.aedt.toolkits.template"

[project.urls]
Source = "https://github.com/pyansys/pyaedt-toolkits-template.git"
Tracker = "https://github.com/pyansys/pyaedt-toolkits-template.git/issues"
Homepage = "https://github.com/pyansys/pyaedt-toolkits-template.git"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 120
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.aedt"]

[tool.coverage.report]
show_missing = true
